--- a/layouts/shortcodes/audio.html
+++ b/layouts/shortcodes/audio.html
@@ -1,3 +1,13 @@
-<audio controls preload="auto">
-  <source src="{{ .Get "src" }}">
-</audio>
+<div class="custom-audio-player">
+	<audio id="audio" preload="auto">
+		<source src="{{ .Get "src" }}">
+	</audio>
+	<div class="controls">
+		<button class="play-pause">▶</button>
+		<div class="progress-container">
+			<div class="progress-bar"></div>
+		</div>
+		<span class="time">0:00</span>
+		<input type="range" class="volume-control" min="0" max="1" step="0.01" value="1">
+	</div>
+</div>
